--- a/WebApplication/Views/Job/Create.cshtml
+++ b/WebApplication/Views/Job/Create.cshtml
@@ -9,7 +9,7 @@
     @Styles.Render("~/Content/JqueryAutocomplete/css")
     @Styles.Render("~/Content/bootstrap-dialog")
     @Styles.Render("~/Content/Notifications/css")
-    @Styles.Render("~/Content/themes/css")
+    @Styles.Render("~/Content/themes/base/css")
 
 }
 
