--- a/WebApplication/Views/Job/Create.cshtml
+++ b/WebApplication/Views/Job/Create.cshtml
@@ -191,6 +191,10 @@
                                 <td>£<span data-bind="text: DeadTotal"></span></td>
                             </tr>
                             <tr>
+                                <td><span ><strong>BOM</strong></span></td>
+                                <td>£<span data-bind="text: BOMTotal"></span></td>
+                            </tr>
+                            <tr>
                                 <td><strong>Costs</strong></td>
                                 <td>£<span data-bind="text: Costs"></span></td>
                             </tr>
@@ -198,10 +202,7 @@
                                 <td><span class="col-md-offset-1"><strong>Timesheets</strong></span></td>
                                 <td>£<span data-bind="text: TimesheetTotal"></span></td>
                             </tr>
-                            <tr>
-                                <td><span class="col-md-offset-1"><strong>BOM</strong></span></td>
-                                <td>£<span data-bind="text: BOMTotal"></span></td>
-                            </tr>
+                            
                             <tr>
                                 <td><strong>Profit / Loss</strong></td>
                                 <td>£<span data-bind="text: ProfitLoss"></span></td>
