--- a/WebApplication/Views/TimeSheet/Create.cshtml
+++ b/WebApplication/Views/TimeSheet/Create.cshtml
@@ -8,6 +8,7 @@
     @Styles.Render("~/Content/JqueryAutocomplete/css")
     @Styles.Render("~/Content/bootstrap-dialog")
     @Styles.Render("~/Content/Notifications/css")
+    @Styles.Render("~/Content/themes/base/css")
 }
 
 
